Fix error message position for tier edit on mobile

--- a/ui/scss/component/_membership.scss
+++ b/ui/scss/component/_membership.scss
@@ -1435,12 +1435,6 @@
       }
     }
   }
-
-  @media (max-width: $breakpoint-small) {
-    .button--primary {
-      width: 100%;
-    }
-  }
 }
 
 // create tiers tab
